# tdd-mcts

./: .dir-locals.el  CMakeLists.txt  README.md  compile_commands.json  mcts.cpp
include/: mcts.h  node.h  tictactoe.h
src/: mcts.cpp  node.cpp  tictactoe.cpp
tests/: main.cpp  mocks.h  testNode.cpp  testState.cpp  testTictactoe.cpp  tictactoeTest.cpp
